compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__float_literals_redundant_comparison_precision_loss.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { 1.0e-500 == 1.0e-600 }"
---
----- SOURCE CODE
pub fn main() { 1.0e-500 == 1.0e-600 }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1.0e-500 == 1.0e-600 }
  │                 ^^^^^^^^^^^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
